fix(hover) rewrite anti-flicker

--- a/css/style.css
+++ b/css/style.css
@@ -184,19 +184,13 @@ div.omnisearch-pagination-wrapper > .pg-right {
 }
 
 /* hoverbox */
-.hoverlink {
-	position: fixed;
-	background: #337ab733;
-	border-radius: 4px;
-	z-index: 202;
-}
-
 .hoverbox {
 	position: fixed;
-	max-width: 600px;
+	width: 600px;
+	max-width: 45vw;
 	z-index: 200;
 	box-shadow: 0 0 12px 0 rgba(0, 0, 0, 1);
-	max-height: 100vh;
+	max-height: 96vh;
 	overflow-y: auto;
 }
 
